--- a/src/app/tab-menu/first-tab/first-tab.component.html
+++ b/src/app/tab-menu/first-tab/first-tab.component.html
@@ -6,13 +6,13 @@
   </div>
   <div class="col-md-10" style="padding:0;">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="이름(Name)">
+      <input type="text" class="form-control" placeholder="이름(Name)" [(ngModel)]="childForm.name">
     </div>
     <div class="form-group">
-      <input type="email" class="form-control" placeholder="이메일(Email)">
+      <input type="email" class="form-control" placeholder="이메일(Email)" [(ngModel)]="childForm.email">
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="주소(Address)">
+      <input type="text" class="form-control" placeholder="주소(Address)" [(ngModel)]="childForm.address">
     </div>
     <div class="checkbox">
       <label>
