--- a/src/app/tab-menu/tab-menu.component.html
+++ b/src/app/tab-menu/tab-menu.component.html
@@ -1,14 +1,14 @@
 <div style="width:100%;padding:0 20px;">
   <tabset class="container">
     <tab heading="1단계">
-      <first-tab></first-tab>
+      <first-tab [childForm]="firstTabForm"></first-tab>
     </tab>
     <tab heading="2단계">
-      <second-tab></second-tab>
+      <second-tab [childForm]="secondTabForm"></second-tab>
     </tab>
   </tabset>
   <div style="padding:10px 0;text-align:center">
-    <button class="btn btn-primary" type="submit" style="width:140px;">제출하기</button>
+    <button class="btn btn-primary" type="button" style="width:140px;" (click)="saveRequest()">제출하기</button>
     <button class="btn btn-info" type="button" style="width:140px;">초기화</button>
   </div>
 </div>
